apps/placemyparents-preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placemyparents-preview
  labels:
    name: placemyparents-preview
